src/test/deca/context/invalid/class2.deca
class A1{}


{
A1 a= A1();    
}